Upgraded junit4 -> junit5